--- a/css/styles.css
+++ b/css/styles.css
@@ -245,6 +245,9 @@ header {
   font-weight: 400;
   border-radius: 30px;
 }
+.Chatbot__convo__btn:focus {
+  outline: none;
+}
 .Chatbot__convo__btn span {
   display: table-cell;
   padding-left: 0.5em;
@@ -253,7 +256,7 @@ header {
   vertical-align: middle;
   width: 25px;
 }
-.change {
+.Chatbot__convo.change {
   transform: translateX(-100%) scale(1, 0);
   transition: all 0.2s ease-in;
   transform-origin: right;
@@ -320,6 +323,7 @@ header {
 .Chatbot__convo1__foot {
   display: flex;
   justify-content: center;
+  align-items: center;
   color: #9a9a9a;
   font-size: 0.825rem;
   padding-bottom: 1em;
